# finance-tracking-v2

./: .env.example  .gitignore  BACKEND_SUMMARY.md  CLAUDE.md  FILE_LISTING.txt  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INFRASTRUCTURE.md  Makefile  SYSTEM_DESIGN.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  backup.py  categorization.py  contacts.py  dynamic_parsers.py  email_dedup.py  email_sync.py  export.py  health.py  ingest.py  matching.py  oauth.py  parser_health.py  planning.py  reports.py  router.py  split_bills.py  transactions.py  unrecognized_emails.py
backend/app/middleware/: request_counter.py
backend/app/models/: __init__.py  email.py  health.py  matching.py  parser_spec.py  planning.py  social.py  system.py  transaction.py
backend/app/parsers/: base.py  dynamic_parser.py  registry.py
backend/app/schemas/: auth.py  categorization.py  common.py  email.py  health.py  ingest.py  matching.py  oauth.py  parser_spec.py  planning.py  social.py  transaction.py  unrecognized_email.py
backend/app/services/: auth_service.py  budget_service.py  categorizer.py  category_analytics.py  category_seeder.py  dashboard_service.py  debt_service.py  dynamic_parser_service.py  email_digest_service.py  email_sync_service.py  gmail_service.py  goal_service.py  health_monitor.py  ingest_service.py  monthly_report_service.py  net_worth_service.py  oauth_service.py  review_queue.py  (+8 more)
backend/tests/: conftest.py  test_email_sync.py  test_oauth.py
(+105 files in other folders)
