[tool.poetry]
name = "finance-tracker-backend"
version = "0.1.0"
description = "Backend for personal finance tracking system"
authors = ["Finance Tracker Team <team@finance-tracker.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
python-dotenv = "^1.0.0"
google-api-python-client = "^1.12.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
celery = "^5.3.4"
redis = "^5.0.1"
apscheduler = "^3.10.4"
httpx = "^0.25.2"
tenacity = "^8.2.3"
cryptography = "^41.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
faker = "^21.0.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
types-beautifulsoup4 = "^4.9.25.14"
sqlalchemy-stubs = "^0.4"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "UP", "B", "A"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
